@@ -234,6 +234,15 @@ Default URL to redirect to on registration/mitigation release.  This
 is only used if a per-violation redirecturl is not defined.
 EOT
 
+[trapping.always_use_redirecturl]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Under most circumstances we can redirect the user to the URL he originally 
+intended to visit. When enabled, always_use_redirecturl forces the captive 
+portal to redirect the user to the URL defined in trapping.redirecturl instead.
+EOT
+
 [trapping.immediate]
 type=toggle
 options=enabled|disabled
